ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rvs-go
  namespace: ns-11
spec:
  rules:
  - host: node-11.mai.ru
    http:
      paths:
      - backend:
          serviceName: ns-11
          servicePort: 80
        path: /
